# rtfm-code

./: .gitignore  LICENSE  README.md  RELEASES.md  pyproject.toml
.github/workflows/: ci.yml
src/rtfm/: defaults.json
src/rtfm/cli/: __init__.py  _graph_loader.py  init.py
src/rtfm/core/: __init__.py  _backend.py  chunker.py  concurrency.py  discovery.py  enricher.py  fusion.py  graph_analysis.py  graph_builder.py  graph_store.py  incremental.py  jedi_enricher.py  manifest.py  model_manager.py  pyright_enricher.py  scope.py  suggestions.py  ts_resolver.mjs  types.py  typescript_enricher.py  validator.py  vector_store.py  watcher.py
src/rtfm/export/: __init__.py  obsidian.py
src/rtfm/extractors/: __init__.py  code_extractor.py  config_extractor.py  crossref_extractor.py  doc_extractor.py  domain_extractor.py  schema_extractor.py  typescript_extractor.py
src/rtfm/query/: __init__.py
src/rtfm/templates/: config.template.json
tests/: test_backend.py  test_chunker.py  test_code_extractor.py  test_dark_spots.py  test_discovery.py  test_discovery_coverage.py  test_doc_crossrefs.py  test_enricher.py  test_extractors_graph_vector.py  test_file_io_resolution.py  test_fusion.py  test_graph_loader.py  test_graph_store.py  test_incremental_enrich.py  test_jedi_parallel.py  test_jedi_warm_cache.py  test_scaffold.py  test_schema_extractor.py  test_semantic_watcher.py  test_suggestions.py  test_ts_enricher.py  test_typescript_extractor.py  test_update_cmd.py  test_validator.py  test_var_reads_writes.py  test_watcher.py
tests/fixtures/: README.md  sample.py  sample.ts  sample_config.json
tests/integration/: test_full_pipeline.py
tests/integration/sample_project/: README.md  package.json  pyproject.toml
tests/integration/sample_project/src/: app.py  client.ts  helpers.ts  middleware.ts  models.py  types.ts  utils.py
tests/integration/sample_project/src/services/: auth_service.py
