[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtfm"
version = "0.1.0"
description = "Structural + semantic code intelligence"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "networkx>=3.3",
    "pyyaml>=6.0",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
]

[project.optional-dependencies]
fast = [
    "igraph>=0.11",
]
enrich = [
    "jedi>=0.19",
    "pyright>=1.1",
]
vector = [
    "lancedb>=0.6",
    "fastembed>=0.2",
]
semantic = [
    "lancedb>=0.6",
    "fastembed>=0.2",
]
typescript = [
    "tree-sitter>=0.21",
    "tree-sitter-typescript>=0.21",
]
watch = [
    "watchfiles>=0.20",
]
dev = [
    "pytest>=7.0",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-typescript>=0.21",
]

[project.scripts]
rtfm = "rtfm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
